Tests/ShouldFail/Try44.adl
CONTEXT Try44 IN ENGLISH
-----------------------------------------------------------
PATTERN "Try44"

PURPOSE CONCEPT X IN ENGLISH {+Some english text-}
PURPOSE CONCEPT X IN DUTCH {+Enige nederlandse woorden-}

ENDPATTERN
-----------------------------------------------------------
ENDCONTEXT

{-
   Purpose: This script should fail, reporting that there are two references to an unknown concept X.
   Result: FAIL
-}